added citibikeStations project to portfolio list

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
           <a href="https://pong-js.netlify.com" target="_blank"><img class="project-pic" src="img/pong.png" alt="Pong"></a>
           <p class="img-description">Built a 1 player version of the classic arcade game Pong in vanilla JavaScript during the Web Development Immersive (WDI) course at General Assembly. Wrote custom collision detection responsive to browser size and mobile devices.</p>
         </li>
+        <li class="row">
+          <a href="https://citibike-react.netlify.com" target="_blank"><img class="project-pic" src="img/citibikeStations.png" alt="Citibike Stations"></a>
+          <p class="img-description">Built on React with custom CSS with full responsiveness (Flexbox and Grid). Mapbox for the map and Google Maps Geocoding API in the search bar. Lots of love too.</p>
+        </li>
 
       </ul>       <!-- Gallery -->
 
