--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
       <div class="titlebox">
         <h1 class="hero-title">Web<br /> <span>Developer</span></h1>
+        <p class="hero-subtitle">My analytical skills and authenticity along with my experience in the Legal, and Service & Hospitality industries has helped me prioritize, organize my workspace and set clear goals for projects. My determination and attention to detail on any given project, are valuable assets to any team.</p>
       </div>
     
     </section>    <!-- /Hero -->
@@ -86,6 +87,10 @@
         <li>
           <i class="fab fa-npm icon-size"></i>
           <h4 class='about-subtitle block'>npm</h4>
+        </li>
+        <li>
+          <i class="ruby icon-size"></i>
+          <h4 class='about-subtitle block'>Ruby</h4>
         </li>
       </ul>
     </section>    <!-- /About -->
