--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         
         <li class="row">
           <a href="https://vinyl.surge.sh" target="_blank"><img class="project-pic" src="img/vinyl.png" alt="Vinyl"></a>
-          <p class="img-description">Final Project for Web Development Immersive.</p>
+          <p class="img-description">Vinyl was built with on an Express server with a React front-end with CRUD (Create, Read, Update and Delete). All UI Controls were custom made and controlled with state. Tracks are uploaded through my express server to an AWS S3 Bucket.</p>
         </li>
 
         <li class="row">
