WIP: SCSS conversion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="nav-header">
 
     <a class="logo" href="#hero">Darwin Smith</a>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" name="nav-toggle" value="">
+    <input id="nav-toggle" class="nav-toggle" type="checkbox" name="nav-toggle" value="">
 
     <nav class="nav-menu">
       <ul>
@@ -25,7 +25,7 @@
       </ul> 
     </nav>        <!-- /nav-menu -->
 
-    <label for="nav-toggle" class="nav-toggle-label">
+    <label class="nav-toggle-label" for="nav-toggle">
       <span></span> <!-- Hamburger Button for Mobile -->
     </label>
 
@@ -53,59 +53,59 @@
       <ul>
         <li>
           <i class="fab fa-html5 icon-size"></i>
-          <h4 class='about-subtitle block'>HTML5</h4>
+          <h4>HTML5</h4>
         </li>
         <li>
           <i class="fab fa-css3-alt icon-size"></i>
-          <h4 class='about-subtitle block'>CSS3</h4>
+          <h4>CSS3</h4>
         </li>
         <li>
           <i class="fab fa-js-square icon-size"></i>
-          <h4 class='about-subtitle block'>JavaScript</h4>
+          <h4>JavaScript</h4>
         </li>
         <li>
           <i class="fas fa-code icon-size"></i>
-          <h4 class='about-subtitle block'>jQuery</h4>
+          <h4>jQuery</h4>
         </li>
         <li>
           <i class="fab fa-react icon-size"></i>
-          <h4 class='about-subtitle block'>React</h4>
+          <h4>React</h4>
         </li>
         <li>
           <i class="fab fa-git-square icon-size"></i>
-          <h4 class='about-subtitle block'>Git</h4>
+          <h4>Git</h4>
         </li>
         <li>
           <i class="fab fa-github icon-size"></i>
-          <h4 class='about-subtitle block'>Github</h4>
+          <h4>Github</h4>
         </li>
         <li>
           <i class="slack icon-size"></i>
-          <h4 class='about-subtitle block'>Slack</h4>
+          <h4>Slack</h4>
         </li>
         <li>
           <i class="fab express icon-size"></i>
-          <h4 class='about-subtitle block'>Express.js</h4>
+          <h4>Express.js</h4>
         </li>
         <li>
           <i class="fas fa-database icon-size"></i>
-          <h4 class='about-subtitle block'>PostgreSQL</h4>
+          <h4>PostgreSQL</h4>
         </li>
         <li>
           <i class="fab fa-npm icon-size"></i>
-          <h4 class='about-subtitle block'>NPM</h4>
+          <h4>NPM</h4>
         </li>
         <li>
           <i class="ruby icon-size"></i>
-          <h4 class='about-subtitle block'>Ruby</h4>
+          <h4>Ruby</h4>
         </li>
         <li>
           <i class="aws icon-size"></i>
-          <h4 class='about-subtitle block'>AWS</h4>
+          <h4>AWS</h4>
         </li>
         <li>
           <i class="fab fa-node icon-size"></i>
-          <h4 class='about-subtitle block'>Node.js</h4>
+          <h4>Node.js</h4>
         </li>
       </ul>
     </section>    <!-- /About -->
@@ -221,7 +221,7 @@
         
         <input type="text" id="name" class="name-input" name="name" placeholder="Name" required>
 
-        <input type="email" id="email" class="email-input"name="_replyto" placeholder="Email" required>
+        <input type="email" id="email" class="email-input" name="_replyto" placeholder="Email" required>
         
         <textarea name="message" id="message" class="message-input" placeholder="Type your message here" spellcheck="true" required></textarea>
 
