--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Darwin Smith | Web Developer</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="./img/favicon_io/site.webmanifest">
 </head>
 
 <body>
@@ -93,7 +97,7 @@
         </li>
         <li>
           <i class="fab fa-npm icon-size"></i>
-          <h4>NPM</h4>
+          <h4>npm</h4>
         </li>
         <li>
           <i class="ruby icon-size"></i>
@@ -229,18 +233,26 @@
 
       </form>
 
-      <div class="email">
-        <i class="fas fa-envelope"></i>
-        <a href="mailto:darwinpsmith@gmail.com">darwinpsmith@gmail.com</a>
-      </div>
-                          
     </section>    <!-- Contact -->
   
   </main>
   
   <footer>
-    <p>Made with HTML5, CSS3, JavaScript & JQuery.</p>
-    <h6>Coded by &copy; <a href="mailto:darwinpsmith@gmail.com">Darwin Smith</a></h6>
+
+    <div class="contact-links">
+        <a href="mailto:darwinpsmith@gmail.com">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/darwinpsmith/">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/darwinpsmith/">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+
+    <p>HTML5, CSS3, JavaScript & jQuery.</p>
+    <h6>&copy; <a href="mailto:darwinpsmith@gmail.com">Darwin Smith 2019</a></h6>
   </footer>
                     <!-- Load jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
