updates style Hero

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h1 class="hero-title">Web</h1>
           <h1 class="hero-title developer">Developer</h1>
         </div>
-        <p class="hero-subtitle">My analytical skills and authenticity along with my experience in the Legal, and Service & Hospitality industries has helped me prioritize, organize my workspace and set clear goals for projects.</p>
+        <p class="hero-subtitle">I am a Full Stack Developer, with a background in Law, Human Rights, and experience in the Service and Hospitality industry, who is passionate about quality, efficiency and effective problem-solving. Whatever I do, I do to the best of my abilities and circumstances. I am determined to make my dreams come true, and make the world and the web a better place for everyone. I also really like riding bikes.</p>
       </div>
     
     </section>    <!-- /Hero -->
