edits description of Vinyl

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>  
           </header>
 
-          <p class="img-description">Vinyl was built with on an Express server with a React front-end with CRUD (Create, Read, Update and Delete). All UI Controls were custom made and controlled with state. Tracks are uploaded through my express server to an AWS S3 Bucket.</p>
+          <p class="img-description">Vinyl, a CRUD app, built with an Express server and a React front-end. The UI controls are custom made and controlled with state. Tracks are uploaded through the express server to an AWS S3 Bucket.</p>
 
         </li>
 
