--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Full Stack Developer | React, Express, HTML5, CSS3, Sass, PostgreSQL">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Darwin Smith | Full Stack Developer</title>
   <link rel="stylesheet" href="css/style.css">
@@ -138,8 +139,8 @@
           <header>
             <img class="project-pic" src="img/vinyl.png" alt="Vinyl" />
             <div class="project-links">
-                <a class="live-site" href="https://vinyl.surge.sh" target="_blank">Live Site</a>
-                <a href="https://github.com/darwin911/vinyl-express" target="_blank">
+                <a class="live-site" href="https://vinyl.surge.sh" target="_blank" rel="noopener" rel="noopener">Live Site</a>
+                <a href="https://github.com/darwin911/vinyl-express" target="_blank" rel="noopener" rel="noopener">
                   <i class="fab fa-github project-icon-github"></i>
                 </a>
             </div>  
@@ -153,8 +154,8 @@
           <header>
             <img class="project-pic" src="img/octave.png" alt="Octave">
             <div class="project-links">
-              <a class="live-site" href="https://octave-bananas.surge.sh" target="_blank">Live Site</a>
-              <a href="https://github.com/darwin911/octave" target="_blank">
+              <a class="live-site" href="https://octave-bananas.surge.sh" target="_blank" rel="noopener" rel="noopener">Live Site</a>
+              <a href="https://github.com/darwin911/octave" target="_blank" rel="noopener" rel="noopener">
                 <i class="fab fa-github icon-size project-icon-github"></i>
               </a>
             </div>
@@ -167,8 +168,8 @@
           <header>
             <img class="project-pic" src="img/pong.png" alt="Pong">
             <div class="project-links">
-              <a class="live-site" href="https://pong-js.netlify.com" target="_blank" class="live-site">Live Site</a>
-              <a href="https://github.com/darwin911/pong" target="_blank"><i class="fab fa-github icon-size project-icon-github"></i></a>
+              <a class="live-site" href="https://pong-js.netlify.com" target="_blank" rel="noopener" rel="noopener">Live Site</a>
+              <a href="https://github.com/darwin911/pong" target="_blank" rel="noopener" rel="noopener"><i class="fab fa-github icon-size project-icon-github"></i></a>
             </div>
           </header>
           <p class="img-description">Built a one player version of the classic arcade game Pong in vanilla JavaScript during the Web Development Immersive (WDI) course at General Assembly. Wrote custom collision detection responsive to browser size and mobile devices.</p>
@@ -179,8 +180,8 @@
             <img class="project-pic" src="img/citibikeStations.png" alt="Citibike Stations">
 
             <div class="project-links">
-              <a class="live-site" href="https://citibike-react.netlify.com" target="_blank" >Live Site</a>
-              <a href="https://github.com/darwin911/citibike-react" target="_blank"><i class="fab fa-github icon-size project-icon-github"></i></a>
+              <a class="live-site" href="https://citibike-react.netlify.com" target="_blank" rel="noopener" rel="noopener">Live Site</a>
+              <a href="https://github.com/darwin911/citibike-react" target="_blank" rel="noopener" rel="noopener"><i class="fab fa-github icon-size project-icon-github"></i></a>
             </div>
           </header>
           
@@ -192,8 +193,8 @@
             <img class="project-pic" src="img/postpic.png" alt="PostPic">
             
             <div class="project-links">
-              <a class="live-site" href="http://luxuriant-bun.surge.sh/" target="_blank">Live Site</a>
-              <a href="https://github.com/darwin911/imageSharingCRUD" target="_blank">
+              <a class="live-site" href="http://luxuriant-bun.surge.sh/" target="_blank" rel="noopener">Live Site</a>
+              <a href="https://github.com/darwin911/imageSharingCRUD" target="_blank" rel="noopener">
                 <i class="fab fa-github icon-size project-icon-github"></i>
               </a>
             </div>
@@ -203,32 +204,32 @@
         </li>
 
         <li class="row">
-          <a href="http://www.juegacomocampeon.org" target="_blank"><img class="project-pic" src="img/jcc.png" alt="Screenshot of tribute webiste for Juega Como Campeon"></a>
+          <a href="http://www.juegacomocampeon.org" target="_blank" rel="noopener"><img class="project-pic" src="img/jcc.png" alt="Screenshot of tribute webiste for Juega Como Campeon"></a>
           <p class="img-description">Designed and built a static website for a non-profit working with underpriviledged children in the Dominican Republic.</p>
         </li>
 
         <li class="row">
-          <a href="sagan/index.html" target="_blank"><img class="project-pic" src="img/sagan.png" alt="Screenshot of tribute webiste for Carl Sagan"></a>
+          <a href="sagan/index.html" target="_blank" rel="noopener"><img class="project-pic" src="img/sagan.png" alt="Screenshot of tribute webiste for Carl Sagan"></a>
           <p class="img-description">Created a Carl Sagan tribute website using Bootstrap 4 on CodePen while completing the Front-End Development Course on FreeCodeCamp.</p>
         </li>
 
         <li class="row">
-          <a href="bike/index.html" target="_blank"><img class="project-pic" src="img/skywalker2.png" alt="Screenshot of a website for Darwin's bike'Skywalker'"></a>
+          <a href="bike/index.html" target="_blank" rel="noopener"><img class="project-pic" src="img/skywalker2.png" alt="Screenshot of a website for Darwin's bike'Skywalker'"></a>
           <p class="img-description">Skywalker was one of my first websites I made from scratch with only HTML5 and CSS3. It also exemplifies my passion for my favorite hobby other than coding: Cycling.</p>
         </li>
 
         <li class="row">
-          <a href="netherpurge/index.html" target="_blank"><img class="project-pic" src="img/netherpurge.png" alt="Netherpurge"></a>
+          <a href="netherpurge/index.html" target="_blank" rel="noopener"><img class="project-pic" src="img/netherpurge.png" alt="Netherpurge"></a>
           <p class="img-description">Made Netherpurge while experimenting on new techniques for navbars and CSS3 animations. The small line that pops up on hover was made with pseudo elements (::before &amp; ::after). Used span tags to create different effects within lines of text, linear gradients, and using transparency were among other things I practiced while creating Netherpurge.</p>
         </li>
 
         <li class="row">
-          <a href="calc/index.html" target="_blank"><img class="project-pic" src="img/calc.png" alt="Calculator"></a>
+          <a href="calc/index.html" target="_blank" rel="noopener"><img class="project-pic" src="img/calc.png" alt="Calculator"></a>
           <p class="img-description">Created all buttons with an unordered list and added styles to make them look like such. Positioning was a bit tricky but helped me improve my CSS skills. JavaScript is what powers the actual functionality of the calculator. Event Listeners and functional programming was key for this project.</p>
         </li>
 
         <li class="row">
-          <a href="fCC_ProductLandingPage/index.html" target="_blank"><img class="project-pic" src="img/fCC_ProductLandingPage.png" alt="freeCodeCamp Product Landing Page"></a>
+          <a href="fCC_ProductLandingPage/index.html" target="_blank" rel="noopener"><img class="project-pic" src="img/fCC_ProductLandingPage.png" alt="freeCodeCamp Product Landing Page"></a>
           <p class="img-description">Created a mockup of a Product Landing Page for freeCodeCamp Web Develeopment course. Used plain CSS to style all form and HTML elements, used SVG's for icons, included a YouTube video with an iframe tag for the first time, applied FlexBox and CSS Grid for layout, as well as media queries for Responsiveness.</p>
         </li>
 
