updates http to https

--- a/index.html
+++ b/index.html
@@ -492,9 +492,9 @@
       crossorigin="anonymous"
     ></script>
     <!-- Load ScrollTo -->
-    <script src="http://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
     <!-- Load localScroll -->
-    <script src="//cdn.jsdelivr.net/npm/jquery.localscroll@2.0.0/jquery.localScroll.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.localscroll@2.0.0/jquery.localScroll.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
